lsws/input: Do not change transparency range.

Fixes ticket #8509.